--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --pink: #f14e95;
   --red: #d24545;
   --bg: #0a0a0a;
-  --shadow: 0 2px rgb(0, 0, 0/0.5);
+  --shadow: 0 2px rgb(0 0 0/0.5);
   --font-dancing: "Dancing Script", cursive;
   --font-noto: "Noto Serif", serif;
   --font-sacramento: "Sacramento", cursive;
@@ -16,11 +16,31 @@ body {
   min-height: 2000px;
 }
 
+.hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("img/background.jpeg");
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
+  /* filter: blur(5px); */
+}
 .hero {
+  position: relative;
   min-height: 100vh;
   /* background-color: var(--bg); */
   /* background-color: rgba(10, 10, 10, 0.8); */
-  background-image: url("img/bg.jpg");
+  /* background-color: rgba(10, 10, 10, 0.2); */
+}
+
+.hero h1,
+.hero h4,
+.hero p {
+  text-shadow: var(--shadow);
 }
 
 .hero h1 {
@@ -40,11 +60,78 @@ body {
 }
 
 .hero a {
-  color: var(--red);
+  /* color: var(--red); */
+  color: white;
   background-color: white;
+  /* box-shadow: var(--shadow); */
+  background-color: rgb(0 0 0/0.5);
 }
 
 .hero a:hover {
   color: white;
-  background-color: var(--red);
+  /* background-color: var(--pink); */
+  color: black;
+  background-color: white;
+}
+
+/* responsive */
+
+/* laptop */
+@media (max-width: 992px) {
+  html {
+    font-size: 75%;
+  }
+
+  .simply-countdown > .simply-section {
+    /* width: 40px;
+    height: 40px; */
+    padding: 70px;
+    /* font-size: 1.2rem; */
+    margin: 10px;
+  }
+}
+
+/* tablet */
+@media (max-width: 768px) {
+  html {
+    font-size: 62.5%;
+  }
+
+  .simply-countdown > .simply-section {
+    /* width: 30px;
+    height: 30px; */
+    padding: 60px;
+    /* font-size: 1rem; */
+    margin: 5px;
+  }
+}
+
+/* phone */
+@media (max-width: 576px) {
+  html {
+    font-size: 50%;
+  }
+
+  .simply-countdown > .simply-section {
+    /* width: 20px;
+    height: 20px; */
+    padding: 45px;
+    /* font-size: 0.8rem; */
+    margin: 3px;
+  }
+}
+
+/* phone */
+@media (max-width: 537px) {
+  html {
+    font-size: 50%;
+  }
+
+  .simply-countdown > .simply-section {
+    width: 5px;
+    height: 5px;
+    padding: 4px;
+    /* font-size: 0.8rem; */
+    margin: 1px;
+  }
 }
