fix(responsive hero)

--- a/countdown/simplyCountdown.theme.default.css
+++ b/countdown/simplyCountdown.theme.default.css
@@ -28,10 +28,6 @@
 
 /* laptop */
 @media (max-width: 992px) {
-  html {
-    font-size: 75%;
-  }
-
   .simply-countdown > .simply-section {
     /* width: 40px;
       height: 40px; */
@@ -64,5 +60,12 @@
 }
 
 /* phone */
-@media (max-width: 537px) {
+@media (max-width: 477px) {
+  .simply-countdown > .simply-section {
+    /* width: 20px;
+          height: 20px; */
+    padding: 20px;
+    /* font-size: 0.8rem; */
+    margin: 3px;
+  }
 }
